chore: container registry login support and exception handling refactoring